2024-11-23T01:44:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11982943610 # 488
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-23
* notice: last 14d: unq all: 3 1725
* notice: prev accum: outdated-unq outdated-all / unq all: 2302 232821 / 2320 234621
* notice: next accum: outdated-unq outdated-all / unq all: 2303 232949 / 2321 234749
* notice: prev exec diff / last date diff / accum: unq all: +1 +128 -0 -75 / +1 +27 -0 -0 / 1 27
* notice: removed / changed dates: [2024-11-08] / [2024-11-09 2024-11-22 2024-11-23]

2024-11-22T01:47:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11964934924 # 487
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-22
* notice: last 14d: unq all: 3 1725
* notice: prev accum: outdated-unq outdated-all / unq all: 2301 232693 / 2319 234498
* notice: next accum: outdated-unq outdated-all / unq all: 2302 232821 / 2320 234621
* notice: prev exec diff / last date diff / accum: unq all: +1 +123 -0 -75 / +1 +25 -0 -0 / 1 25
* notice: removed / changed dates: [2024-11-07] / [2024-11-08 2024-11-21 2024-11-22]

2024-11-21T01:46:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11945037537 # 486
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-21
* notice: last 14d: unq all: 3 1730
* notice: prev accum: outdated-unq outdated-all / unq all: 2300 232565 / 2318 234373
* notice: next accum: outdated-unq outdated-all / unq all: 2301 232693 / 2319 234498
* notice: prev exec diff / last date diff / accum: unq all: +1 +125 -0 -75 / +1 +26 -0 -0 / 1 26
* notice: removed / changed dates: [2024-11-06] / [2024-11-07 2024-11-20 2024-11-21]

2024-11-20T01:46:20Z: