@@ -1,8 +1,8 @@
 {
   "timestamp" : "2024-11-24T01:53:21Z",
-  "count" : 53,
-  "count_minmax" : [ 53, 128 ],
-  "count_decinc" : [ -75, +128 ],
+  "count" : 20,
+  "count_minmax" : [ 20, 20 ],
+  "count_decinc" : [ -0, +20 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
