@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-11-23T01:44:20Z",
-  "count_outdated" : 232949,
-  "uniques_outdated" : 2303,
-  "count" : 234749,
-  "uniques" : 2321,
+  "timestamp" : "2024-11-24T01:53:21Z",
+  "count_outdated" : 233077,
+  "uniques_outdated" : 2304,
+  "count" : 234870,
+  "uniques" : 2322,
   "clones" : [
     {
-      "timestamp": "2024-11-09T00:00:00Z",
-      "count": 53,
-      "count_minmax": [ 29, 128 ],
-      "count_decinc": [ 75, 128 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-11-10T00:00:00Z",
-      "count": 128,
-      "count_minmax": [ 128, 128 ],
-      "count_decinc": [ 0, 128 ],
+      "count": 53,
+      "count_minmax": [ 53, 128 ],
+      "count_decinc": [ 75, 128 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2024-11-23T00:00:00Z",
-      "count": 27,
-      "count_minmax": [ 27, 27 ],
-      "count_decinc": [ 0, 27 ],
+      "count": 128,
+      "count_minmax": [ 27, 128 ],
+      "count_decinc": [ 0, 128 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-11-24T00:00:00Z",
+      "count": 20,
+      "count_minmax": [ 20, 20 ],
+      "count_decinc": [ 0, 20 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
