@@ -1,3 +1,12 @@
+2024-11-24T01:53:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11992170140 # 489
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-24
+* notice: last 14d: unq all: 3 1718
+* notice: prev accum: outdated-unq outdated-all / unq all: 2303 232949 / 2321 234749
+* notice: next accum: outdated-unq outdated-all / unq all: 2304 233077 / 2322 234870
+* notice: prev exec diff / last date diff / accum: unq all: +1 +121 -0 -75 / +1 +20 -0 -0 / 1 20
+* notice: removed / changed dates: [2024-11-09] / [2024-11-10 2024-11-23 2024-11-24]
+
 2024-11-23T01:44:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11982943610 # 488
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-23
